[package]
name = "jake"
version = "1.0.1"
edition = "2021"
authors = ["Harrison Hemstreet"]
description = "Jake runs everything Exploro."
repository = "https://github.com/globalonboardpartners/exploro-group-webservice"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
dotenv = "0.15.0"
serde = {version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"
tokio = {version = "1.27.0", features = ["full"]}
chrono = {version = "0.4.28", features = ["serde"]}
sqlx = {version = "0.7.1", features = ["postgres", "runtime-tokio", "chrono", "uuid", "macros"]}
actix-cors = "0.6.4"
argon2 = "0.5.2"
uuid = { version = "1.4.1", features = ["serde"] }
